<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextAppearance.BookTracker.Headline"

    tools:showIn="navigation_view">

    <!-- Sección de Usuario -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_bar_chart"
            android:title="@string/nav_statistics" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_filled"

            android:title="@string/nav_favorites" />

        <item
            android:id="@+id/nav_reading_log"
            android:icon="@drawable/ic_book"
            android:title="@string/registro_general" />
    </group>

    <!-- Divider -->
    <item android:title="Configuración">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_about" />
        </menu>
    </item>


</menu>